--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,15 +4,15 @@ orbs:
   node: circleci/node@5.2.0
 
 jobs:
-  install-node-example:
-    docker:
-      - image: cimg/base:stable
+  test:
+    executor:
+      name: node/default
     steps:
       - checkout
-      - node/install:
-          node-version: '20.14'
-      - run: node --version
+      - node/install-packages
+      - run:
+          command: npx playwright test
 workflows:
   test_my_app:
     jobs:
-      - install-node-example
+      - test
