--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ jobs:
       - run:
           name: Upload artifacts
           command: |
-            gcloud storage cp -r /workspace/dist gs://moz-fx-data-prot-nonprod-c3a1-protodash/dawg/static/test/abc
+            gcloud storage cp -r ~/project/dist gs://moz-fx-data-prot-nonprod-c3a1-protodash/dawg/static/test/abc
 
 workflows:
   ci:
