--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,7 +59,11 @@ workflows:
       - build
   deploy:
     jobs:
-      - build
+      - build:
+          filters:
+            branches:
+              only:
+                - main
       - artifact-deployment:
           name: Deploy static website
           context: gcpv2-workload-identity
