--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,18 +59,17 @@ workflows:
       - build
   deploy:
     jobs:
-      - build
-#      - build:
-#          filters:
-#            branches:
-#              only:
-#                - main
+      - build:
+          filters:
+            branches:
+              only:
+                - main
       - artifact-deployment:
           name: Deploy static website
           context: gcpv2-workload-identity
           requires:
             - build
-#          filters:
-#            branches:
-#              only:
-#                - main
+          filters:
+            branches:
+              only:
+                - main
