--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/core": "^11.0.1",
     "flowbite": "^2.4.1",
     "vue": "^3.4.29",
     "vue-router": "^4.4.3"
