--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
       - run: npm run build
       - run: npm run test:e2e:ci
       - store_test_results:
-          path: ./playwright-report
+          path: ./test-results
 
   build:
     executor:
