--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,7 +64,7 @@ jobs:
       - run:
           name: Upload artifacts
           command: |
-            gsutil rsync -r -x "gcpv.*\.json" ~/project/dist gs://moz-fx-data-prot-nonprod-c3a1-protodash/dawg/static
+            gsutil rsync -d -r -x "gcpv.*\.json" ~/project/dist gs://moz-fx-data-prot-nonprod-c3a1-protodash/dawg/static
 
 workflows:
   ci:
