--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
+    "test": "run-p test:unit test:e2e",
     "test:unit": "vitest --exclude=e2e/*",
     "test:e2e": "playwright test",
     "build-only": "vite build",
