Move config to config file

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "test": "run-p test:unit test:e2e",
-    "test:unit": "vitest --exclude=e2e/*",
+    "test:unit": "vitest run",
     "test:e2e": "playwright test",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
