Add types to test

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "preview": "vite preview",
-    "test": "run-p test:unit test:e2e",
+    "test": "run-p test:unit test:e2e test:types",
     "test:unit": "vitest run",
     "test:e2e": "playwright test",
     "test:types": "vue-tsc --build --force",
