--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
     steps:
       - checkout
       - node/install-packages
-      - run: npm run build-only -- --mode development
+      - run: npm run build -- --mode development
       - run:
           command: npm run test:e2e
           environment:
@@ -46,13 +46,13 @@ jobs:
       - store_test_results:
           path: ./test-results/e2e-results.xml
 
-  type-check:
+  test-types:
     executor:
       name: pw-jammy-development
     steps:
       - checkout
       - node/install-packages
-      - run: npm run type-check
+      - run: npm run test:types
 
   build:
     executor:
@@ -63,7 +63,7 @@ jobs:
       - run:
           name: Build assets
           command: |
-            npm run build-only -- --base="/dawg/"
+            npm run build -- --base="/dawg/"
       - persist_to_workspace:
           root: ~/project
           paths:
@@ -93,7 +93,7 @@ workflows:
   ci:
     jobs:
       - lint
-      - type-check
+      - test-types
       - test-unit
       - test-e2e
       - build
