--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,9 +33,7 @@ jobs:
           paths:
             - ./node_modules
       - persist_to_workspace:
-          root: workspace
-          paths:
-            - ./
+          root: ./
 
   lint:
     executor:
@@ -122,7 +120,11 @@ workflows:
             - setup
   deploy:
     jobs:
-      - setup
+      - setup:
+          filters:
+            branches:
+              only:
+                - main
       - build:
           requires:
             - setup
