--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,8 @@ jobs:
     executor:
       name: pw-jammy-development
     steps:
+      - attach_workspace:
+          at: *cwd
       - run:
           command: npm run lint
 
