--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,40 +10,12 @@ executors:
     working_directory: &cwd /tmp/dawg
 
 jobs:
-  setup:
-    executor:
-      name: pw-jammy-development
-    steps:
-      - restore_cache:
-          keys:
-            - &source-cache source-v1-{{ .Branch }}-{{ .Revision }}
-            - source-v1-{{ .Branch }}-
-            - source-v1-
-      - checkout
-      - save_cache:
-          key: *source-cache
-          paths:
-            - '.git'
-      - restore_cache:
-          keys:
-            - &package-cache npm-packages-{{ checksum "package-lock.json" }}
-      - node/install-packages
-      - save_cache:
-          name: Save NPM Package Cache
-          key: npm-packages-{{ checksum "package-lock.json" }}
-          paths:
-            - ./node_modules
-      - persist_to_workspace:
-          root: *cwd
-          paths:
-            - ./
-
   lint:
     executor:
       name: pw-jammy-development
     steps:
-      - attach_workspace:
-          at: *cwd
+      - checkout
+      - node/install-packages
       - run:
           command: npm run lint
 
@@ -51,8 +23,8 @@ jobs:
     executor:
       name: pw-jammy-development
     steps:
-      - attach_workspace:
-          at: *cwd
+      - checkout
+      - node/install-packages
       - run: npm run test:unit
       - store_test_results:
           path: ./test-results/unit-results.xml
@@ -61,8 +33,8 @@ jobs:
     executor:
       name: pw-jammy-development
     steps:
-      - attach_workspace:
-          at: *cwd
+      - checkout
+      - node/install-packages
       - run: npm run test:types
 
   build:
@@ -71,6 +43,8 @@ jobs:
     steps:
       - attach_workspace:
           at: *cwd
+      - checkout
+      - node/install-packages
       - run: npm run build -- --base="/dawg/"
       - persist_to_workspace:
           root: *cwd
@@ -110,33 +84,16 @@ jobs:
 workflows:
   ci:
     jobs:
-      - setup
-      - lint:
-          requires:
-            - setup
-      - test-types:
-          requires:
-            - setup
-      - test-unit:
-          requires:
-            - setup
-      - build:
-          requires:
-            - setup
+      - lint
+      - test-types
+      - test-unit
+      - build
       - test-e2e:
           requires:
-            - setup
             - build
   deploy:
     jobs:
-      - setup:
-          filters:
-            branches:
-              only:
-                - main
       - build:
-          requires:
-            - setup
           filters:
             branches:
               only:
