Make vite commands all recognize process.CI as requiring /dawg/ prefix

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
           at: *cwd
       - checkout
       - node/install-packages
-      - run: npm run build -- --base="/dawg/"
+      - run: npm run build
       - persist_to_workspace:
           root: *cwd
           paths:
