--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:e2e": "playwright test",
     "test:types": "vue-tsc --build --force",
     "build": "vite build",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --ignore-path .gitignore",
     "format": "prettier --write src/"
   },
   "dependencies": {
