--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       - checkout
       - node/install-packages
       - run:
-          command: npm run lint:check
+          command: npm run lint
 
   test-unit:
     executor:
