--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,7 +61,7 @@ jobs:
       - store_test_results:
           path: ./test-results/e2e-results.xml
 
-  artifact-deployment:
+  artifact-deployment-v1:
     executor: gcp-cli/google
     steps:
       - attach_workspace:
@@ -81,6 +81,26 @@ jobs:
           command: |
             gsutil rsync -r -x "gcpv.*\.json" ~/project/dist gs://moz-fx-data-prot-nonprod-c3a1-protodash/dawg/static
 
+  artifact-deployment-v2:
+    executor: gcp-cli/google
+    steps:
+      - attach_workspace:
+          at: ~/project
+      - run:
+          name: Prepare environment variables for OIDC authentication
+          command: |
+            echo 'export GOOGLE_PROJECT_ID="moz-fx-data-static-websit-f7e0"' >> "$BASH_ENV"
+            echo "export OIDC_WIP_ID=$GCPV2_WORKLOAD_IDENTITY_POOL_ID" >> "$BASH_ENV"
+            echo "export OIDC_WIP_PROVIDER_ID=$GCPV2_CIRCLECI_WORKLOAD_IDENTITY_PROVIDER" >> "$BASH_ENV"
+            echo "export GOOGLE_PROJECT_NUMBER=$GCPV2_WORKLOAD_IDENTITY_POOL_PROJECT_NUMBER" >> "$BASH_ENV"
+            echo "export OIDC_SERVICE_ACCOUNT_EMAIL=$GCPV2_SERVICE_ACCOUNT_EMAIL" >> "$BASH_ENV"
+      - gcp-cli/setup:
+          use_oidc: true
+      - run:
+          name: Upload artifacts
+          command: |
+            gsutil rsync -r -x "gcpv.*\.json" ~/project/dist gs://protosaur-stage-iap-static-website/dawg          
+
 workflows:
   ci:
     jobs:
@@ -96,7 +116,16 @@ workflows:
             branches:
               only:
                 - main
-      - artifact-deployment:
+      - artifact-deployment-v1:
+          name: Deploy static website
+          context: gcpv2-workload-identity
+          requires:
+            - build
+          filters:
+            branches:
+              only:
+                - main
+      - artifact-deployment-v2:
           name: Deploy static website
           context: gcpv2-workload-identity
           requires:
